fix: Align Informations Recipe of the day Section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,9 +129,8 @@ h1, h2 {
 }
 
 #story {
-    height: 400px;
+    height: 450px;
     flex-direction: row-reverse;
-    align-items: center;
     background-color: #181D31;
 }
 
@@ -141,7 +140,6 @@ h1, h2 {
     width: 100%;
     color: #E6DDC4;   /* Add color for paragraphs in Story Area */
     padding: 30px;
-    /*margin: 40px;*/
     float: left;
 }
 
@@ -184,20 +182,21 @@ h1, h2 {
 }
 
 
-
-
 /* Recipe of the Day Section - Homepage */
 
 #recipe-section-homepage {
-    height: 500px;
+    height: 600px;
     width: 100%;
+    overflow: hidden;
 }
 
 #recipes {
     background-color: #181D31;
     width: 100%;
-    height: 400px;
+    height: 450px;
 }
+
+/* The Flex Box have been studied on W3School Website */
 
 .container {
     width: 100%;
@@ -218,54 +217,54 @@ h1, h2 {
 }
 
 /* Add Flex property for the div elements of the Recipe of the Day Section */
+
+.recipe-day-container{
+    align-items: start;
+}
+
 .flex-title-recipe {
-    flex: 33%;
+    flex: 33.3%;
     margin-left: 40px;
+    line-height: 25px;
+    margin-top: 40px;
 }
 
 .flex-image-recipe {
-    flex: 34%;
+    flex: 33.3%;
+    margin-top: 40px;
 }
 
 .flex-ingredient-recipe {
-    flex: 33%;
+    flex: 33.3%;
     margin-right: 40px;
+    line-height: 25px;
+    margin-top: 40px;
 }
 
-#recipe-ingredients h2 {
+#recipe-ingredients h2, #recipe-title h2 {
     color: #E6DDC4;
     text-align: center;
-    font-size: 30px;
+    font-size: 200%;
 }
 
 #recipe-ingredients h3 {
     color: #E6DDC4;
-    font-size: 110%;
-}
-
-#recipe-title h2{
-    color: #E6DDC4;
+    font-size: 125%;
     text-align: center;
-    align-content: center;
-    font-size: 30px;
 }
 
-#recipe-ingredients ul li {
+#recipe-ingredients ul li, #recipe-title ul li {
     color: #E6DDC4;
     list-style-type: none;
     font-size: 110%;
 }
-
-#recipe-title ul li {
-    color: #E6DDC4;
-    list-style-type: none;
-    font-size: 110%;
-}
-
 
 
 
 /* Footer Section */
+
+/* Credit: Love Running Project */
+
 footer {
     height: 150px;
 }
@@ -291,6 +290,17 @@ footer {
 
 
 
+/* Media Queries */
+
+
+
+
+
+
+
+
+
+
 /* Contact Us Page */
 
 #form-area-contact-us {
@@ -300,7 +310,6 @@ footer {
     background: url(/assets/images/contact-us-background.jpg) no-repeat center center;
     position: relative;
 }
-
 
 
 #image-text-contact-us{
